--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href ="main.css">
 </head>
 <body class="dark-theme">
-    <h1>Task List</h1>
-    <p id="msg">Current tasks:</p>
+    <h1>Eduardo Munoz</h1>
+    <p id="msg">Things to do:</p>
     <ul>
-        <li class="list">Add visual styles</li>
-        <li class="list">Add light and dark themes</li>
-        <li>Enable switching the theme</li>
+        <li class="list">Better theme</li>
+        <li class="list">Add support for blog and other</li>
+        <li class ="list">Add pictures of myself</li>
     </ul>
     <div>
         <button class="btn">Dark</button>
